WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194411
[Mac] WebInspectorUI.framework does not need to be soft-linked anymore
https://bugs.webkit.org/show_bug.cgi?id=194411
Summary
[Mac] WebInspectorUI.framework does not need to be soft-linked anymore
Blaze Burg
Reported
2019-02-07 13:30:24 PST
This was re-added by
https://bugs.webkit.org/show_bug.cgi?id=118544
. It is no longer needed.
Attachments
Patch
(17.91 KB, patch)
2019-02-07 14:05 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
Patch
(20.88 KB, patch)
2019-02-14 12:21 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
Patch
(20.88 KB, patch)
2019-02-14 13:26 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
Patch
(20.82 KB, patch)
2019-02-15 10:37 PST
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2019-02-07 13:30:45 PST
<
rdar://problem/47787614
>
Blaze Burg
Comment 2
2019-02-07 14:05:46 PST
Created
attachment 361440
[details]
Patch
Joseph Pecoraro
Comment 3
2019-02-07 15:39:55 PST
Comment on
attachment 361440
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=361440&action=review
> Source/WebKit/Configurations/WebKit.xcconfig:131 > +WK_WEBINSPECTORUI_LDFLAGS = $(WK_WEBINSPECTORUI_LDFLAGS_$(WK_PLATFORM_NAME)); > +WK_WEBINSPECTORUI_LDFLAGS_macosx = -framework WebInspectorUI;
I don't think we can hard link WebInspectorUI as it doesn't look like WebInspectorUI.framework is available in the Base System.
Joseph Pecoraro
Comment 4
2019-02-07 15:41:35 PST
Comment on
attachment 361440
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=361440&action=review
>> Source/WebKit/Configurations/WebKit.xcconfig:131 >> +WK_WEBINSPECTORUI_LDFLAGS_macosx = -framework WebInspectorUI; > > I don't think we can hard link WebInspectorUI as it doesn't look like WebInspectorUI.framework is available in the Base System.
Correction: is *not* available
Darin Adler
Comment 5
2019-02-09 12:44:06 PST
Comment on
attachment 361440
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=361440&action=review
>>> Source/WebKit/Configurations/WebKit.xcconfig:131 >>> +WK_WEBINSPECTORUI_LDFLAGS_macosx = -framework WebInspectorUI; >> >> I don't think we can hard link WebInspectorUI as it doesn't look like WebInspectorUI.framework is available in the Base System. > > Correction: is *not* available
So we could consider switching from soft linking to weak linking.
Joseph Pecoraro
Comment 6
2019-02-11 11:03:51 PST
Good point, weak linking should work.
Blaze Burg
Comment 7
2019-02-14 11:50:53 PST
Reopening to try -weak_framework based approach.
Blaze Burg
Comment 8
2019-02-14 12:21:56 PST
Created
attachment 362046
[details]
Patch
Joseph Pecoraro
Comment 9
2019-02-14 12:37:33 PST
Comment on
attachment 362046
[details]
Patch r=me
Blaze Burg
Comment 10
2019-02-14 13:26:04 PST
Created
attachment 362056
[details]
Patch
Joseph Pecoraro
Comment 11
2019-02-14 13:49:15 PST
Comment on
attachment 362056
[details]
Patch r=me still =)
Blaze Burg
Comment 12
2019-02-14 14:32:27 PST
Committed
r241564
: <
https://trac.webkit.org/changeset/241564
>
Truitt Savell
Comment 13
2019-02-15 07:58:19 PST
After the changes in
https://trac.webkit.org/changeset/241564/webkit
Mac WK2 has 50+ Timeouts and is exiting early. These are mostly in the http/ directory. Results:
https://build.webkit.org/results/Apple%20Mojave%20Release%20WK2%20(Tests)/r241565%20(2502)/results.html
Build:
https://build.webkit.org/builders/Apple%20Mojave%20Release%20WK2%20%28Tests%29/builds/2502
Confirmed this locally with: run-webkit-tests --root testbuild-241564 http/ -f Timeouts occur throughout the directory on 241564 but not on 241563
Truitt Savell
Comment 14
2019-02-15 08:11:11 PST
Reverted
r241564
for reason: Caused 50+ Timeouts on Mac WK2, mostly in the http/ directory Committed
r241586
: <
https://trac.webkit.org/changeset/241586
>
Blaze Burg
Comment 15
2019-02-15 10:20:07 PST
Comment on
attachment 362056
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=362056&action=review
> Source/WebKit/UIProcess/mac/WebInspectorProxyMac.mm:743 > + NSString *path = [bundle pathForResource:@"Main" ofType:@"html"];
When splitting up this line, I introduced a typo. Tests fail because it isn't loading Test.html. I must have run WKTR against a stale build, or something.
Blaze Burg
Comment 16
2019-02-15 10:37:26 PST
Created
attachment 362126
[details]
Patch
Blaze Burg
Comment 17
2019-02-15 11:02:04 PST
Committed
r241597
: <
https://trac.webkit.org/changeset/241597
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug